--- a/notion-tracker.html
+++ b/notion-tracker.html
@@ -1,9 +1,16 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CTHQMP2PG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<html>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2CTHQMP2PG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-2CTHQMP2PG');
-</script>
+      gtag('config', 'G-2CTHQMP2PG');
+    </script>
+  </head>
+  <body>
+    Hallo
+  </body>
+</html>
