--- a/MinMaxHighlight.html
+++ b/MinMaxHighlight.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-
+    <div> Viel Spaß mit Power BI - ich hoffe dir hier helfen zu können. Bei Fragen kannst du jederzeit hier in Notion kommentieren. </div>
   </body>
 </html>
 
