--- a/MinMaxHighlight.html
+++ b/MinMaxHighlight.html
@@ -12,7 +12,11 @@
 
   </head>
   <body>
-        <p>Viel Spaß auf meiner Seite. Bei Fragen kannst du jederzeit hier in Notion kommentieren.</p>
+    <font face="Segoe UI">
+     <p>Viel Spaß auf meiner Seite. <br>
+          Bei Fragen kannst du jederzeit hier in Notion kommentieren.
+    </p>
+    </font>
   </body>
 </html>
 
