--- a/MinMaxHighlight.html
+++ b/MinMaxHighlight.html
@@ -11,7 +11,7 @@
 </script>
 
   </head>
-  <body>
+  <body style="background-color:white;">
     <font face = "Segoe UI">
      <p>Viel Spaß auf meiner Seite. <br>
           Bei Fragen kannst du jederzeit hier in Notion kommentieren.
