--- a/MinMaxHighlight.html
+++ b/MinMaxHighlight.html
@@ -15,6 +15,7 @@
     <font face = "Segoe UI">
      <p>Viel Spaß auf meiner Seite. <br>
           Bei Fragen kannst du jederzeit hier in Notion kommentieren.
+       Nur zur Info: Ich analysiere Seitenaufrufe, um euch zukünftig ein noch besseres Erlebnis bieten zu können.
     </p>
     </font>
   </body>
