--- a/MinMaxHighlight.html
+++ b/MinMaxHighlight.html
@@ -14,9 +14,9 @@
   <body style="background-color:white;">
     <font face = "Segoe UI">
      <p>Viel Spaß auf meiner Seite. <br>
-          Bei Fragen kannst du jederzeit hier in Notion kommentieren.
-       Nur zur Info: Ich analysiere Seitenaufrufe, um euch zukünftig ein noch besseres Erlebnis bieten zu können.
-    </p>
+          Bei Fragen kannst du jederzeit hier in Notion kommentieren.    </p>
+       <p style="font-style: italic;"> <small>Nur zur Info: Ich analysiere Seitenaufrufe, um euch zukünftig ein noch besseres Erlebnis bieten zu können. </small></p>
+
     </font>
   </body>
 </html>
