--- a/main-page.html
+++ b/main-page.html
@@ -11,7 +11,14 @@
 </script>
 
   </head>
-  <body>
-    Hallo
+  <body style="background-color:white;">
+    <font face = "Segoe UI">
+     <p>Viel Spaß auf meiner Seite. <br>
+          Bei Fragen kannst du jederzeit hier in Notion kommentieren.    </p>
+       <p style="font-style: italic;"> <small>Nur zur Info: Ich analysiere Seitenaufrufe, um euch zukünftig ein noch besseres Erlebnis bieten zu können. </small></p>
+
+    </font>
   </body>
 </html>
+
+<!-- https://wrozyna.notion.site/ -->
